...
    <string name="book_detail_title">Book Detail</string>
    <string name="home_title">Home</string>


    <string name="recent_searches">Recent Searches</string>
    <string name="top_searches">Top Searches</string>
    <string name="results_string">Search Results</string>

    <string name="login_page_app_name">BookShelf</string>
    <string name="login_page_signup_text">Sign Up </string>
    <string name="login_page_forgot_pass_text">Forgot Password</string>
    <string name="signin_button">Sign In</string>
    <string name="login_page_email_hint">Email ID</string>
...
    <string name="enter_detail_manually_button_text">Enter Details Manually</string>
    <string name="or">OR</string>
    <string name="select_book_text">Select Book to Continue</string>
    <string name="search_result_count_text">Search Result (0)</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="book_image_text">Book Image</string>
    <string name="book_name_text">Book Name* </string>
    <string name="book_name_hint">Enter title</string>
    <string name="author_text">Author*</string>
    <string name="author_name_hint">Author Name</string>
...
    <string name="tags_text">Tags*</string>
    <string name="tags_hint">Add tags seperated with comma</string>
    <string name="genre_text">Genre*</string>
    <string name="comments_text">Comments</string>
    <string name="comments_hint">Add brief view about book</string>

    <string name="add_book_text">Add My Book</string>
    <string name="action_bar_color_string">#2A2D35</string>
    <string name="step1">Step 1/2</string>
    <string name="search_option">Search Book</string>

    <string name="step2">Step 2/2</string>
    <string name="add_detail">Add Detail</string>
    <string name="add_manually">Add Detail manually</string>
    <string name="image_disc_text1">Dimension 110px*150px</string>
    <string name="image_disc_text2">(Max size 50mb)</string>
...
