<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="com.talentica.presentation.leadCapturePage.home.model.BookModel" />

        <variable
            name="bookModel"
            type="BookModel" />
    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="70dp"
            android:layout_height="113dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="#000000"
            android:scaleType="fitCenter">

            <ImageView
                android:id="@+id/book_thumbnail_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/book1" />

            <ImageView
                android:id="@+id/book_thumbnail_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/select"
                android:visibility="gone" />
        </RelativeLayout>


        <TextView
            android:id="@+id/book_name"
            style="@style/ClearBold14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@{bookModel.bookName}" />

        <TextView
            android:id="@+id/book_author"
            style="@style/ClearRegular12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@{bookModel.authersName}" />

        <TextView
            android:id="@+id/book_lender"
            style="@style/OpaqueRegular12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@{bookModel.lender}" />

    </LinearLayout>

</android.support.v7.widget.CardView>
</layout>